--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 .outer-square {
-    /* your css goes here */
-      width: 600px;
-      height: 600px;
-      display: grid;
-      gap: 10px;
-      grid-template-columns: repeat(3, 1fr);
-  }
-  .inner-square {
-    /* your css goes here */
-    background-color: green;
-    width: 190px;
-    height: 190px;
-  }
-  .circle {
-    /* your css goes here */
-    width: 190px;
-    height: 190px;
-    background-color: blue;
-    border-radius: 50%;
-  }
+  /* your css goes here */
+  width: 600px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  background-color: #fff;
+}
+.inner-square {
+  /* your css goes here */
+  background-color: green;
+  margin: 10px;
+}
+.circle {
+  /* your css goes here */
+  background-color: blue;
+  border-radius: 50%;
+  margin: 10px;
+}
